# risk

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
doc/source/: conf.py  index.rst  risk.rst
docs/: Makefile  make.bat
docs/source/: install.rst
risk/: risk.py  stats.py
risk.egg-info/: PKG-INFO  SOURCES.txt
src/risk/: __init__.py  battle.py  battle_predictor.py  dice_roll.py  dice_roll_outcome.py  risk.py
test/: test_risk.py  test_stats.py
