[tool.poetry]
name = "risk"
version = "0.1.0"
description = "Model and statistically analyse Risk game."
authors = ["Flavio Grandin <flavio.grandin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
jinja2 = "^3.1.2"
ipywidgets = "^8.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
